修改字体为思源宋体

--- a/logseq/bak/logseq/custom/2022-05-20T11_45_05.108Z.css
+++ b/logseq/bak/logseq/custom/2022-05-20T11_45_05.108Z.css
@@ -18,7 +18,8 @@
 <== }}} */
 
 /* { == 1. Global ==> */
-    @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;700&display=swap");
+    @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+    @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap");
     :root {
         font-size: 1.0375rem;
     }
@@ -29,7 +30,7 @@
     .dark-theme,
     html[data-theme="light"],
     .white-theme {
-        --ls-font-family: "Noto Serif SC", sans-serif;
+        --ls-font-family: "Roboto", sans-serif;
         --ls-main-content-max-width: 860px;
         --ls-page-text-size: 1em;
         --ls-page-title-size: 2rem;
@@ -446,7 +447,7 @@
     .extensions__code > .CodeMirror {
         border-radius: 0.25rem;
         background: var(--ls-secondary-background-color);
-        font-family: "Noto Serif SC", monospace;
+        font-family: "Fira Code", monospace;
         line-height: 1.2;
     }
     .CodeMirror-hscrollbar {
