加入一个可爱的进度条

--- a/logseq/bak/logseq/custom/2022-05-20T11_53_14.189Z.css
+++ b/logseq/bak/logseq/custom/2022-05-20T11_53_14.189Z.css
@@ -17,6 +17,24 @@
   4.2. Table of Contents
 <== }}} */
 
+/* Progress bar */
+progress {
+    vertical-align: middle;
+    border-radius: 8px;
+    height: 0.6em;
+    width: 100px;
+    border: 1px solid #000;
+    overflow: hidden;
+  }
+  
+  progress::-webkit-progress-bar {
+    background: #1c7d7de6;
+  }
+  
+  progress::-webkit-progress-value {
+    background: #1c7d7de6;
+  }
+
 /* { == 1. Global ==> */
     @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;700&display=swap");
     :root {
@@ -29,7 +47,7 @@
     .dark-theme,
     html[data-theme="light"],
     .white-theme {
-        --ls-font-family: "Roboto", sans-serif;
+        --ls-font-family: "Noto Serif SC", sans-serif;
         --ls-main-content-max-width: 860px;
         --ls-page-text-size: 1em;
         --ls-page-title-size: 2rem;
@@ -446,7 +464,7 @@
     .extensions__code > .CodeMirror {
         border-radius: 0.25rem;
         background: var(--ls-secondary-background-color);
-        font-family: "Fira Code", monospace;
+        font-family: "Noto Serif SC", monospace;
         line-height: 1.2;
     }
     .CodeMirror-hscrollbar {
