--- a/logseq/bak/logseq/custom/2022-05-20T11_53_01.619Z.css
+++ b/logseq/bak/logseq/custom/2022-05-20T11_53_01.619Z.css
@@ -17,9 +17,26 @@
   4.2. Table of Contents
 <== }}} */
 
+/* Progress bar */
+progress {
+    vertical-align: middle;
+    border-radius: 8px;
+    height: 0.6em;
+    width: 100px;
+    border: 1px solid #000;
+    overflow: hidden;
+  }
+  
+  progress::-webkit-progress-bar {
+    background: #1c7d7de6;
+  }
+  
+  progress::-webkit-progress-value {
+    background: var(--ct-success-color);
+  }
+
 /* { == 1. Global ==> */
-    @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-    @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap");
+    @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;700&display=swap");
     :root {
         font-size: 1.0375rem;
     }
@@ -30,7 +47,7 @@
     .dark-theme,
     html[data-theme="light"],
     .white-theme {
-        --ls-font-family: "Roboto", sans-serif;
+        --ls-font-family: "Noto Serif SC", sans-serif;
         --ls-main-content-max-width: 860px;
         --ls-page-text-size: 1em;
         --ls-page-title-size: 2rem;
@@ -447,7 +464,7 @@
     .extensions__code > .CodeMirror {
         border-radius: 0.25rem;
         background: var(--ls-secondary-background-color);
-        font-family: "Fira Code", monospace;
+        font-family: "Noto Serif SC", monospace;
         line-height: 1.2;
     }
     .CodeMirror-hscrollbar {
