--- a/logseq/bak/logseq/custom/2022-05-20T12_09_59.829Z.css
+++ b/logseq/bak/logseq/custom/2022-05-20T12_09_59.829Z.css
@@ -1,4 +1,3 @@
-
 /* Table of Contents
 {{{ ==>
 1. Global
@@ -28,7 +27,7 @@ progress {
   }
   
   progress::-webkit-progress-bar {
-    background: #1c7d7de6;
+    background: #f0f0f1;
   }
   
   progress::-webkit-progress-value {
@@ -47,7 +46,7 @@ progress {
     .dark-theme,
     html[data-theme="light"],
     .white-theme {
-        --ls-font-family: "Noto Serif SC", sans-serif;
+        --ls-font-family: "Noto Serif SC";
         --ls-main-content-max-width: 860px;
         --ls-page-text-size: 1em;
         --ls-page-title-size: 2rem;
@@ -727,5 +726,5 @@ progress {
 }
 
 .genshin {
-  font-family: Genshin;
+  font-family: "Noto Serif SC";
 }
